finshed most buttons including numbers, period, and evaluator, this has been done with eval() and I dont consider it correct, or at least done by specifications, it works for the most part, but when I return, i shall do it the way it was intended and solve the overflow issue.

--- a/styles.css
+++ b/styles.css
@@ -6,40 +6,50 @@
     font-family: "Orbitron";
 }
 
+
+
 .document {
     height: 100vh;
     width: 100%;
     border: 1px solid red;
     display: flex;
-    justify-content: center;
+    justify-content:space-around;
     align-items: center;
+}
+.text {
+    /* font-size: 30px; */
+    width: 10%;
+    /* text-shadow: 60px 50px 9px red; */
 }
 
 .calculator {
     width: 450px; 
     height: 650px;
     background-color: black;
-    border: 9px solid rgb(77, 69, 69);
+    border: 9px solid rgb(48, 38, 133);
     border-radius: 50px 50px 50px 50px;
     display: flex;
     flex-direction: column;
     padding: 20px;
+    margin-right: 500px;
     /* box-shadow: rgb(85, 91, 255) 0px 0px 0px 3px, rgb(31, 193, 27) 0px 0px 0px 6px, rgb(255, 217, 19) 0px 0px 0px 9px, rgb(255, 156, 85) 0px 0px 0px 12px, rgb(255, 85, 85) 0px 0px 0px 15px; */
     /* box-shadow: 0 0 0 2px rgba(148,0,211,1), 15px -15px 0 -2px rgba(255,255,255,1), 15px -15px 0 0 rgba(75,0,130,1), 30px -30px 0 -2px rgba(255,255,255,1), 30px -30px 0 0 rgba(0,0,255,1), 45px -45px 0 -2px rgba(255,255,255,1), 45px -45px 0 0 rgba(0,255,0,1), 60px -60px 0 -2px rgba(255,255,255,1), 60px -60px 0 0 rgba(255,255,0,1), 75px -75px 0 -2px rgba(255,255,255,1), 75px -75px 0 0 rgba(255,127,0,1), 90px -90px 0 -2px rgba(255,255,255,1), 90px -90px 0 0 rgba(255,0,0,1); */
     /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
-    box-shadow: rgba(231, 7, 7, 0.4) -5px 5px, rgba(238, 4, 55, 0.3) -10px 10px, rgba(240, 2, 2, 0.2) -15px 15px, rgba(238, 8, 8, 0.1) -20px 20px, rgba(231, 4, 61, 0.05) -25px 25px;
+    /* box-shadow: rgba(231, 7, 7, 0.4) -5px 5px, rgba(238, 4, 55, 0.3) -10px 10px, rgba(240, 2, 2, 0.2) -15px 15px, rgba(238, 8, 8, 0.1) -20px 20px, rgba(231, 4, 61, 0.05) -25px 25px; */
 }
 
 .screen {
     width: 100%;
     height: 25%;
     border: 2px solid rgb(241, 4, 4);
-    padding: 50px 0px;
+    padding: 50px 20px;
     border-radius: 30px;
     font-size: 40px;
     text-align: center;
     color: red;
     background-color: rgb(0, 0, 0);
+    display: flex;
+    letter-spacing: 10px;
 }
 
 .buttonBody {
@@ -79,4 +89,8 @@
     justify-content: center;
     align-items: center;
     font-size: 20px;
+}
+
+h4 {
+    letter-spacing: 10px;
 }
